Alterações nas funções do input submit e no style.css

--- a/style.css
+++ b/style.css
@@ -109,6 +109,19 @@
     cursor: pointer;
 
   }
+  #inputsubmit{
+
+    background-color:  aliceblue;
+    padding: 5px;
+    width: 30%;
+    left: 30%;
+    top: 64%;
+    position: absolute;
+    outline: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+  }
 /* h1 e rodape*/
   h1{
     text-align: center;
