--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .Divtelainicial{
     background-color: rgba(15, 39, 248, 1);
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 80px;
@@ -30,10 +30,10 @@
     background-color: rgba(15, 39, 248, 1);
     position: absolute;
     width: 50%;
-    top: 50%;
+    top: 53%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 80px;
+    padding: 40px;
     border-radius: 15px;
     color: aliceblue;
 
@@ -257,6 +257,14 @@
     border-radius: 10px;
     cursor: pointer;
 
+  }
+  /* arrumando a cor do link */
+  #ancora{
+    color: #00A0C6;
+    text-decoration: none;
+    color: none;
+    text-decoration: none;
+    cursor: pointer;
   }
 
   footer{
