--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     color: aliceblue;
   }
   /*div tela de cadastro e demais telas */
-  .headerctelacadastro{
+.headerctelacadastro{
   background-color: rgb(238, 239, 243);
   position: absolute;
   top: 0%;
@@ -37,6 +37,32 @@
     border-radius: 15px;
     color: aliceblue;
 
+}
+/* tabela*/
+table{
+  page-break-inside: auto;
+  width: 99%;
+
+}
+tr{
+  page-break-inside: avoid;
+  page-break-after: auto;
+}
+thead{
+  display: table-header-group;
+}
+
+.tabela{
+
+  background-color: rgba(15, 39, 248, 1);
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    padding: 2px;
+    border-radius: 15px;
+    color: aliceblue;
 }
  /* h1 telas de cadastro e demais*/
 #h1cadastro{
