--- a/style.css
+++ b/style.css
@@ -39,31 +39,17 @@
 
 }
 /* tabela*/
-table{
-  page-break-inside: auto;
-  width: 99%;
-
-}
-tr{
-  page-break-inside: avoid;
-  page-break-after: auto;
-}
-thead{
-  display: table-header-group;
-}
 
 .tabela{
-
-  background-color: rgba(15, 39, 248, 1);
+    background-color: rgba(15, 39, 248, 1);
     position: absolute;
-    top: 20%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    padding: 2px;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 80px;
     border-radius: 15px;
     color: aliceblue;
-}
+  }
  /* h1 telas de cadastro e demais*/
 #h1cadastro{
     color: rgba(15, 39, 248, 1);
